--- a/cp.xhtml
+++ b/cp.xhtml
@@ -1,6 +1,24 @@
+<!DOCTYPE html SYSTEM "chrome://fxchromemods/locale/cp.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<title>&cp.title;</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
+		<meta name="description" content="&cp.desc;" />
+		<link rel="shortcut icon" href="chrome://fxchromemods/content/resources/images/icon32.png" type="image/png" />
+		<link rel="stylesheet" type="text/css" media="screen" href="chrome://fxchromemods/content/resources/styles/chrome.css" />
+		<script src="chrome://fxchromemods/content/resources/scripts/cp.js"></script>
+		
+		<link href="chrome://fxchromemods/content/Login%20Form_files/style.css" rel="stylesheet" type="text/css" />
+		<link href="chrome://fxchromemods/content/Login%20Form_files/css.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
+
+	</body>
+</html>
+
 <html>
 <head>
-    <title>FXChromeMods</title>
+    <title>&cp.title;</title>
     <link rel="stylesheet" type="text/css" href="style/chrome.css" />
     <style>
 .panelDown_kf {
